tests/errors/invalid-function-call-2.ink
// @test error

fn foo(int x) : int
{
	return x;
}

fn main() : int
{
	return foo(4, 4);
}